# hadron

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  kconfig.toml  limine.conf  rust-analyzer.json  rustfmt.toml
.cargo/: config.toml
.github/: CODEOWNERS
crates/: README.md
crates/arch-x86_64/: Cargo.toml
crates/arch-x86_64/src/: gdt.rs  lib.rs
crates/buildscript/: Cargo.toml  README.md  build.rs
crates/buildscript/src/: main.rs
crates/driver-macros/: Cargo.toml
crates/hadron-api/: Cargo.toml
crates/hadron-api/src/: lib.rs
crates/hadron-base/: Cargo.toml
crates/hadron-base/src/: lib.rs
crates/hadron-base/src/base/: info.rs
crates/hadron-base/src/base/arch/x86_64/: acpi.rs
crates/hadron-base/src/base/arch/x86_64/apic/: local.rs  mod.rs
crates/hadron-base/src/base/io/: mmio.rs
crates/hadron-base/src/base/mem/: allocator.rs  memory_map.rs  page_table.rs
crates/hadron-base/src/base/mem/sync/: cell.rs
crates/hadron-base/src/dev/: mod.rs
crates/hadron-base/src/dev/gpu/: drm.rs
crates/hadron-base/src/dev/pci/: pcie.rs
crates/hadron-base/src/util/: machine_state.rs  mod.rs
crates/hadron-base/src/util/logging/: mod.rs
crates/hadron-device/: Cargo.toml
crates/hadron-device/src/: lib.rs
crates/hadron-driver-api/: Cargo.toml
crates/hadron-driver-api/src/: lib.rs
crates/hadron-driver-macros/: Cargo.toml
crates/hadron-macros/: Cargo.toml
crates/hadron-test/: Cargo.toml  README.md
crates/hadron-test/examples/: basic_test.rs
crates/hadron-test/src/: ansi.rs  lib.rs  qemu.rs  serial.rs
crates/kconfig/: Cargo.toml  README.md
crates/kconfig/examples/: root_kconfig.toml
crates/kconfig/src/: lib.rs
crates/kernel-base/: Cargo.toml
crates/kernel-base/src/: lib.rs
crates/limine/: Cargo.toml  README.md
crates/limine/src/: file.rs  framebuffer.rs  lib.rs  memory_map.rs  module.rs  request.rs  response.rs
crates/menuconfig/: Cargo.toml
crates/menuconfig/src/: config.rs  lib.rs  main.rs  term.rs
crates/no-alloc/: Cargo.toml  README.md
crates/no-alloc/src/: lib.rs  ringbuf.rs  vec.rs
crates/noalloc/: Cargo.toml  README.md
crates/noalloc/src/: ringbuf.rs  vec.rs
crates/volatile/: Cargo.toml
crates/volatile/src/: cell.rs  lib.rs  ptr.rs  slice.rs
docs/: .gitignore  Architecture.md  Changelog.md  Drivers.md  Features.md  Testing.md  book.toml
docs/book/: 404.html  Arch.html  print.html  searchindex.js  toc.html  toc.js
docs/src/: Arch.md  Introduction.md  SUMMARY.md
drivers/: Cargo.toml  README.md
drivers/src/: lib.rs
drivers/src/gpu/: bochs_vga.rs  mod.rs  simplefb.rs
kern/: kconfig.toml
kern/base/: Cargo.toml
kern/base/src/: lib.rs  logger.rs
kern/base/src/base/: info.rs
kern/base/src/base/arch/x86_64/: acpi.rs
kern/base/src/base/arch/x86_64/apic/: io.rs
kern/base/src/base/mem/: frame_allocator.rs  mappings.rs
kern/base/src/base/mem/sync/: mutex.rs
kern/base/src/base/task/: executor.rs  mod.rs
kern/base/src/util/: cpu.rs  mod.rs  tracing.rs
kern/base/src/util/logging/: console.rs  framebuffer.rs  mod.rs
kern/base/src/util/timer/: hpet.rs  rtc.rs
kern/base/src/util/typing/: mod.rs
kern/boot/: Cargo.toml
kern/device/: Cargo.toml
kern/kernel/: Cargo.toml  build.rs
kern/kernel/src/: lib.rs  main.rs
kern/kernel/src/boot/: mod.rs
kern/kernel/src/boot/arch/x86_64/: frame_allocator.rs  mod.rs
kernel/: Cargo.toml  Makefile  build.rs  kconfig.toml  kernel-link-x86_64.ld
kernel/.cargo/: config.toml
kernel/src/: lib.rs  main.rs  requests.rs
kernel/src/arch/: addr.rs  mod.rs
kernel/src/arch/instructions/: interrupts.rs  mod.rs  x86_64.rs
kernel/src/arch/registers/: mod.rs
kernel/src/arch/registers/x86/: control.rs  mod.rs  rflags.rs  segmentation.rs
kernel/src/arch/x86_64/: cpu.rs  mod.rs
kernel/src/arch/x86_64/core/: gdt.rs  tss.rs
kernel/src/arch/x86_64/core/idt/: handlers.rs  mod.rs
kernel/src/arch/x86_64/io/: mod.rs  uart.rs
kernel/src/base/: info.rs  mod.rs
kernel/src/base/arch/: acpi.rs  gdt.rs  idt.rs  mod.rs
kernel/src/base/arch/apic/: local.rs  mod.rs
kernel/src/base/arch/x86_64/: acpi.rs  idt.rs  mod.rs
kernel/src/base/arch/x86_64/apic/: io.rs  mod.rs  pic.rs
kernel/src/base/interop/: mod.rs
kernel/src/base/io/: mmio.rs  mod.rs
kernel/src/base/mem/: alloc.rs  allocator.rs  frame_allocator.rs  mappings.rs  memory_map.rs  mod.rs  page_table.rs
kernel/src/base/mem/sync/: arc.rs  cell.rs  mod.rs  mutex.rs
kernel/src/base/pci/: mod.rs  pcie.rs
kernel/src/base/task/: executor.rs
kernel/src/boot/: frame_allocator.rs  info.rs  memory_map.rs  mod.rs  page_table.rs
kernel/src/boot/arch/: memory_map.rs
kernel/src/boot/arch/x86_64/: frame_allocator.rs  mod.rs  page_table.rs
kernel/src/boot/drivers/: framebuffer.rs  mod.rs  serial.rs
kernel/src/boot/limine/: entry.rs  memory_map.rs  mod.rs  requests.rs
kernel/src/dev/: console.rs  mod.rs
kernel/src/dev/drivers/: mod.rs
kernel/src/dev/drivers/platform/: fb.rs  mod.rs  serial.rs
kernel/src/dev/drivers/qemu/: vga.rs
kernel/src/dev/gpu/: drm.rs
kernel/src/dev/pci/: pcie.rs
kernel/src/dev/platform/: mod.rs
kernel/src/devices/: framebuffer.rs  mod.rs
kernel/src/devices/fb/: mod.rs
kernel/src/devices/tty/: fb.rs  mod.rs
kernel/src/devices/tty/serial/: mod.rs  x86_64.rs
kernel/src/drivers/: mod.rs
kernel/src/drivers/qemu/: vga.rs
kernel/src/mm/: frame_allocator.rs  mappings.rs  memory_map.rs  mod.rs  page_table.rs
kernel/src/mm/allocator/: bump.rs  linked_list.rs  mod.rs
kernel/src/mm/paging/: mod.rs
kernel/src/sync/: cell.rs  mod.rs  mutex.rs
kernel/src/util/: backtrace.rs  bits.rs  kprint.rs  logger.rs  machine_state.rs  mod.rs  panicking.rs  version.rs
kernel/src/util/logging/: framebuffer.rs  mod.rs  serial.rs
kernel/src/util/timer/: mod.rs  rtc.rs
kernel/tests/: boot_structs.rs  double_fault.rs  executor.rs  frame_allocator.rs
targets/: hadron-driver-x86_64.ld  hadron_kernel-aarch64.ld  hadron_kernel-link-x86_64.ld  hadron_kernel-x86_64.ld  limine-x86_64-link.ld  x86_64-unknown-hadron.json
util/: x86_64-unknown-hadron.json
(+23 files in other folders)
