[workspace]
resolver = "2"
members = [
    "crates/buildscript",
    "crates/hadron-driver-macros",
    "crates/hadron-base",
    "crates/hadron-device",
    "crates/hadron-driver-api",
    "crates/hadron-macros",
    "crates/hadron-test",
    "crates/limine",
    "crates/menuconfig",
    "crates/no-alloc",
    "crates/volatile",
    "drivers",
    "kernel",
]
default-members = ["crates/buildscript"]
exclude = ["util"]

[workspace.package]
version = "0.0.1"
edition = "2024"

# We have a generic image runner that we use for all the packages
[workspace.metadata.image-runner]
limine-branch = "v8.x-binary"
config-file = "limine.conf"
extra-files = []
# We can configure this to use UEFI or BIOS
boot-type = "bios"
test-success-exit-code = 33
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-display",
    "none",
]
run-args = ["-s"]

run-command = [
    "qemu-system-x86_64",
    "-cdrom",
    "{}",
    "-machine",
    "q35",
    "-serial",
    "stdio",
    "-no-reboot",
]

[workspace.dependencies]
hadron-base = { path = "crates/hadron-base", default-features = false }
hadron-device = { path = "crates/hadron-device", default-features = false }
hadron-drivers = { path = "drivers", default-features = false }
hadron-macros = { path = "crates/hadron-macros", default-features = false }
hadron-driver-api = { path = "crates/hadron-driver-api", default-features = false }

menuconfig = { path = "crates/menuconfig", default-features = false }
limine = { path = "crates/limine", default-features = false }
volatile = { path = "crates/volatile", default-features = false }
hadron-test = { path = "crates/hadron-test", default-features = false }
no-alloc = { path = "crates/no-alloc", default-features = false }

tracing = { version = "0.1.41", default-features = false }
x86_64 = "0.15.2"
static_assertions = { version = "1.1.0", features = ["nightly"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
log = "0.4.27"
bitflags = "2.9.0"
spin = "0.10.0"
