[workspace]
resolver = "2"
members = [
    "crates/*",
    "kernel",
]
default-members = ["crates/buildscript"]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.90.0"

# We have a generic image runner that we use for all the packages
[workspace.metadata.image-runner]
limine-branch = "v8.x-binary"
config-file = "limine.conf"
extra-files = []
# We can configure this to use UEFI or BIOS
boot-type = "bios"
test-success-exit-code = 33
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
]
run-args = ["-s"]

run-command = [
    "qemu-system-x86_64",
    "-cdrom",
    "{}",
    "-machine",
    "$machine",
    "-serial",
    "stdio",
    "-no-reboot",
]
vars = { machine = "q35" }

[workspace.dependencies]
kconfig = { path = "crates/kconfig", default-features = false }
menuconfig = { path = "crates/menuconfig", default-features = false }
limine = { path = "crates/limine", default-features = false }
volatile = { path = "crates/volatile", default-features = false }
hadron-test = { path = "crates/hadron-test", default-features = false }
no-alloc = { path = "crates/no-alloc", default-features = false }

tracing = { version = "0.1.41", default-features = false }
x86_64 = "0.15.2"
static_assertions = { version = "1.1.0", features = ["nightly"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
log = "0.4.27"
bitflags = "2.9.0"
spin = "0.10.0"
chrono = { version = "0.4.40", default-features = false, features = ["alloc"] }
