[package]
name = "hadron-kernel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "hadron-kernel"
path = "src/main.rs"
test = false
bench = false

[[test]]
name = "double_fault"
harness = false

[dependencies]
lazy_static.workspace = true
limine.workspace = true
spin.workspace = true
no-alloc.workspace = true

# Only Utility External Dependencies
bitflags = { workspace = true, features = ["bytemuck"] }
bytemuck = "1.23.2"
static_assertions = { workspace = true, features = ["nightly"] }

[dev-dependencies]
hadron-test.workspace = true
