[package]
name = "arch-x86_64"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
bitflags = "2.9.0"
kernel-base.workspace = true

[dev-dependencies]
hadron-test.workspace = true

[package.metadata.qemu_runner]
limine-branch = "v8.x-binary"
config-file = "limine.conf"
test-success-exit-code = 33
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-display",
    "none",
]

run-command = [
    "qemu-system-x86_64",
    "-cdrom",
    "{}",
    "-serial",
    "stdio",
    "-no-reboot",
]
