[package]
name = "menuconfig"
version = "0.1.0"
edition = "2024"

[features]
default = ["menuconfig"]
menuconfig = ["dep:clap", "dep:crossterm", "dep:ratatui"]

[dependencies]
clap = { version = "4.5.35", features = ["derive"], optional = true }
clap_derive = {version = "4.5.32", optional = true }
crossterm = {version = "0.29.0", optional = true }
ratatui = {version = "0.29.0", optional = true }
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
