[package]
name = "menuconfig"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["menuconfig"]
menuconfig = ["dep:crossterm", "dep:ratatui"]

[dependencies]
crossterm = {version = "0.29.0", optional = true }
ratatui = {version = "0.29.0", optional = true }
serde = "1.0.219"
serde_derive = "1.0.219"
toml = "0.8.20"
