[package]
name = "kernel-base"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
no-alloc.workspace = true

spin = "0.10.0"
uart_16550 = { version = "0.3.2", features = ["nightly"] }
